@@ -1,3 +1,7 @@
+2003-09-30  Bernhard Held <bernhard@bernhardheld.de>
+
+	* src/SDCCcse.c: fixed part of bug #814548
+
 2003-09-28  Borut Razem <borut.razem@siol.net>
 
 	* src/asm.c: rewrite of printILine() to use temporary file instead
